# MatrixOOP

./: .gitignore  CMakeLists.txt
include/GrayscaleImage/: CMakeLists.txt  GrayscaleImage.h
libs/GrayscaleImage/: CMakeLists.txt
libs/GrayscaleImage/include/GrayscaleImage/: GrayscaleImage.h
libs/GrayscaleImage/src/: GrayscaleImage.cpp
libs/matrix/: CMakeLists.txt
libs/matrix/include/matrix/: matrix.h
libs/matrix/src/: matrix.cpp
src/: CMakeLists.txt  GrayscaleImage.cpp  main.cpp
src/BMP/: BMP.h  CMakeLists.txt
src/GrayscaleImage/: CMakeLists.txt  GrayscaleImage.cpp  GrayscaleImage.h
src/image/: CMakeLists.txt  image.cpp  image.h
src/matrix/: CMakeLists.txt  matrix.cpp  matrix.h
tests/: CMakeLists.txt  matrix_test.cpp
