#cmake_minimum_required(VERSION 3.27)
#
## Include directories
#include_directories(../src/matrix)
#include_directories(../src/GrayscaleImage)
#
## Add tests
#add_executable(matrix_test matrix_test.cpp ../src/matrix/matrix.cpp ../src/matrix/matrix.h)
#add_test(matrix_test matrix_test)
#
#add_executable(GrayscaleImage_test GrayscaleImage_test.cpp ../src/GrayscaleImage/GrayscaleImage.cpp ../src/GrayscaleImage/GrayscaleImage.h ../src/matrix/matrix.cpp ../src/matrix/matrix.h)
#add_test(GrayscaleImage_test GrayscaleImage_test)
